Tentando corrigir problemas

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,8 @@
 from = "/*"
 to = "/index.html"
 status = 200
+
+[[headers]]
+  for = "/*.js" # Isso corresponde a todos os arquivos .js
+    [headers.values]
+    Content-Type = "application/javascript"
